fix alignment issue with article-preview__cta

--- a/css/style.scss
+++ b/css/style.scss
@@ -124,7 +124,7 @@ $mobile-width: 42em;
   .article-preview__cta {
     position: absolute;
     z-index: 200;
-    bottom: 40px;
+    bottom: 25px;
     right: 40px;
     background: $bg-light;
     width: 3.2em;
@@ -248,7 +248,7 @@ $mobile-width: 42em;
     }
 
     .article-preview__cta {
-      bottom: 15px;
+      bottom: 16px;
       right: 25px;
       width: 2.5em;
       height: 2.5em;
